# os-builder

./: .gitignore  .trivy-ignore.yaml  .trivy.yaml  AI_INTEGRATION_PROPOSAL.md  CHANGELOG.md  CREATE_GITHUB_ISSUE.sh  GitVersion.yml  LICENSE  MICROSHIFT_BUILDER_MIGRATION.md  MICROSHIFT_MIGRATION.md  Makefile  RASPBERRY_PI_SETUP.md  README.md  SELF_HOSTED_MIGRATION.md  VERSION_MANAGEMENT.md  renovate.json  versions.json  versions.txt
.cursor/rules/: containerfiles.mdc  documentation.mdc  git-workflow.mdc  github-actions.mdc  project-overview.mdc  shell-scripts.mdc  version-management.mdc
.github/: dependabot.yml
.github/actions/: README.md
.github/workflows/: README.md  build-and-security-scan.yaml  build-microshift.yaml  build-os.yaml  bundle-cli.yml  dependency-update.yaml  security-scan.yaml  (+1 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
crates/bundle-cli/: Cargo.toml
crates/bundle-cli/src/: checksum.rs  create.rs  error.rs  format.rs  image_ref.rs  inspect.rs  main.rs  manifest.rs  verify.rs
crates/bundle-cli/tests/: create_integration.rs  exit_codes.rs
docs/: GITVERSION.md  INTERACTIVE_INSTALLATION.md  ISO_BUILDING.md  MACOS_LIMITATIONS.md  MICROSHIFT_OPTIMIZATION.md  MICROSHIFT_SOURCE_BUILD.md  bundle-cli-design.md
os/: Containerfile.fedora  Containerfile.fedora.optimized  Containerfile.k3s  Containerfile.microshift  Dockerfile  Makefile  README.md  build-iso.sh  build.sh  iso-config.toml  kickstart-interactive.ks  kickstart.ks
scripts/: fix-trivy-cache.sh  gitversion-demo.sh
(+122 files in other folders)
